--- a/mouse_PFC_20250325_reverse_calc.ipynb
+++ b/mouse_PFC_20250325_reverse_calc.ipynb
@@ -552,12 +552,22 @@
     "# 2. GPCRのリストおよび GPCR_type_df のフィルタリング\n",
     "# \"Unnamed: 0\" を除外したカラムリストを作成\n",
     "GPCR_list2 = [col for col in GPCR_adata_norm_df.columns if col != \"Unnamed: 0\"]\n",
+    "# 全細胞の GPCR 発現データ（正規化済み）の DataFrame を用意\n",
+    "# ※ GPCR_adata_norm_df の index と adata.obs_names が整合している前提\n",
+    "all_expr = pd.DataFrame(GPCR_adata_norm_df, index=GPCR_adata_norm_df.index, columns=GPCR_list2)\n",
+    "\n",
     "#GPCR_type_df = GPCR_type_df[GPCR_type_df.receptor_name.isin(GPCR_list2)]\n",
     "Gs = GPCR_type_df[GPCR_type_df.type == \"Gs\"][\"receptor_name\"].values\n",
     "Gi = GPCR_type_df[GPCR_type_df.type == \"Gi\"][\"receptor_name\"].values\n",
-    "Gs_cols = [gene + '_raw' for gene in Gs]\n",
-    "Gi_cols = [gene + '_raw' for gene in Gi]\n",
-    "# 3. ランダムな受容体阻害パターンを 10,000 パターン生成\n",
+    "# expression_df に存在し、かつ effective_Ki にも存在する GPCR のみを抽出\n",
+    "Gs_filtered = [gene for gene in Gs if (gene + '_raw' in all_expr.columns)]\n",
+    "Gi_filtered = [gene for gene in Gi if (gene + '_raw' in all_expr.columns)]\n",
+    "\n",
+    "# フィルタ後のリストから、expression_df の列名用リストを作成\n",
+    "Gs_cols = [gene + '_raw' for gene in Gs_filtered]\n",
+    "Gi_cols = [gene + '_raw' for gene in Gi_filtered]\n",
+    "\n",
+    "# 4. ランダムな受容体阻害パターンを 10,000 パターン生成\n",
     "unique_patterns_set = set()\n",
     "pattern_dict = {}\n",
     "i = 0\n",
@@ -575,18 +585,7 @@
     "for key in list(pattern_dict.keys())[:5]:\n",
     "    print(f\"{key}: {pattern_dict[key]}\")\n",
     "\n",
-    "# 4. 全細胞の GPCR 発現データ（正規化済み）の DataFrame を用意\n",
-    "# ※ GPCR_adata_norm_df の index と adata.obs_names が整合している前提\n",
-    "all_expr = pd.DataFrame(GPCR_adata_norm_df, index=GPCR_adata_norm_df.index, columns=GPCR_list2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def simulate_response_all(expression_df, pattern, drug_conc, Gs, Gi):\n",
+    "def simulate_response_all(expression_df, pattern, drug_conc, Gs_cols, Gi_cols):\n",
     "    \"\"\"\n",
     "    expression_df: 各細胞の受容体発現 (DataFrame, 行=細胞, 列=受容体)\n",
     "    pattern: 受容体阻害パターン（辞書, receptor -> bool, True=阻害する）\n",
@@ -604,14 +603,58 @@
     "    })\n",
     "    #print(effective_Ki)\n",
     "    responses = {}\n",
-    "    # 各薬剤について、Gs 効果・Gi 効果を計算\n",
-    "    gs_effect = (expression_df[Gs_cols].divide(1 + drug_conc / effective_Ki[Gs])).sum(axis=1)\n",
-    "    gi_effect = (expression_df[Gi_cols].divide(1 + drug_conc / effective_Ki[Gi])).sum(axis=1)\n",
+    "    # Gs 効果・Gi 効果を計算\n",
+    "    gs_effect = (expression_df[Gs_cols].divide(1 + drug_conc / effective_Ki[Gs_cols])).sum(axis=1)\n",
+    "    gi_effect = (expression_df[Gi_cols].divide(1 + drug_conc / effective_Ki[Gi_cols])).sum(axis=1)\n",
     "    basal_cAMP = (expression_df[Gs_cols] - expression_df[Gi_cols]).sum(axis=1)\n",
     "    cAMPmod = (gs_effect - gi_effect) - basal_cAMP\n",
     "    print(\"cAMPmod\")\n",
+    "    print(cAMPmod.sum())\n",
     "    \n",
-    "    # 各薬剤の結果は、細胞ごとの cAMPmod の Series とする\n",
+    "    # 細胞ごとの cAMPmod の Series とする\n",
+    "    responses= cAMPmod\n",
+    "    return responses\n",
+    "\n",
+    "# 6. 各阻害パターンについて、全細胞でシミュレーションした後、clz_selective と非選択細胞間の差分を算出\n",
+    "results = []\n",
+    "# adata.obs のインデックスと all_expr のインデックスが一致しない可能性があるため、再インデックスする\n",
+    "mask_aligned = mask.reindex(all_expr.index, fill_value=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_response_all(expression_df, pattern, drug_conc, Gs_cols, Gi_cols):\n",
+    "    \"\"\"\n",
+    "    expression_df: 各細胞の受容体発現 (DataFrame, 行=細胞, 列=受容体)\n",
+    "    pattern: 受容体阻害パターン（辞書, receptor -> bool, True=阻害する）\n",
+    "    drug_list: 薬剤名のリスト\n",
+    "    drug_conc: 薬剤濃度（scalar）\n",
+    "    Gs, Gi: Gs, Gi タイプ受容体名の配列\n",
+    "    \"\"\"\n",
+    "    # 阻害パターンに応じた effective Ki の設定\n",
+    "    # 阻害する受容体は Ki = 0.01、阻害しない受容体は Ki = 10000\n",
+    "    #effective_Ki = pd.Series({receptor: (0.01 if pattern[receptor] else 10000)\n",
+    "    #                          for receptor in expression_df.columns})\n",
+    "    effective_Ki = pd.Series({\n",
+    "    receptor: (0.01 if pattern[receptor] else 10000)\n",
+    "    for receptor in expression_df.columns\n",
+    "    })\n",
+    "    #print(effective_Ki)\n",
+    "    responses = {}\n",
+    "    # Gs 効果・Gi 効果を計算\n",
+    "    gs_effect = (expression_df[Gs_cols].divide(1 + drug_conc / effective_Ki[Gs_cols])).sum(axis=1)\n",
+    "    gi_effect = (expression_df[Gi_cols].divide(1 + drug_conc / effective_Ki[Gi_cols])).sum(axis=1)\n",
+    "    basal_cAMP = (expression_df[Gs_cols] - expression_df[Gi_cols]).sum(axis=1)\n",
+    "    cAMPmod = (gs_effect - gi_effect) - basal_cAMP\n",
+    "    print(\"cAMPmod\")\n",
+    "    print(cAMPmod.sum())\n",
+    "    \n",
+    "    # 胞ごとの cAMPmod の Series とする\n",
     "    responses= cAMPmod\n",
     "    return responses\n",
     "\n",
@@ -645,29 +688,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['ADRB1_raw',\n",
-       " 'ADRB2_raw',\n",
-       " 'DRD1_raw',\n",
-       " 'DRD5_raw',\n",
-       " 'HRH2_raw',\n",
-       " 'HTR4_raw',\n",
-       " 'HTR6_raw',\n",
-       " 'HTR7_raw']"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cAMPmod\n",
+      "5282437.368931888\n"
+     ]
     }
    ],
    "source": [
-    "Gs_cols"
+    "res=simulate_response_all(expression_df, pattern, 100, Gs_cols, Gi_cols)"
    ]
   },
   {
