--- a/mouse_NAc_20250320.ipynb
+++ b/mouse_NAc_20250320.ipynb
@@ -45,7 +45,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scanpy as sc\n",
@@ -84,8 +96,8 @@
     "import calculation_tool as ct\n",
     "import gc\n",
     "import cupy as cp\n",
-    "gc.collect()\n",
-    "cp.get_default_memory_pool().free_all_blocks()"
+    "#gc.collect()\n",
+    "#cp.get_default_memory_pool().free_all_blocks()"
    ]
   },
   {
